<resources>
    <!--<string name="app_name">Chinaren</string>-->
    <!--Main Activity-->
    <string name="navigation_drawer_open">打开侧栏</string>
    <string name="navigation_drawer_close">关闭侧栏</string>

    <string-array name="tabTitles">
        <item>主页</item>
        <item>联系人</item>
        <item>发现</item>
        <item>我</item>
    </string-array>

    <string-array name="noticTabTitles">
        <item>项目1</item>
        <item>项目2</item>
        <item>项目3</item>
    </string-array>
    <string name="qr_scan_tips">将二维码放入框内，即可自动扫描</string>
    <string name="actionbar_title_qr_scan">二维码/条码</string>

    <string name="str_request_camera_message">请求获取相机权限</string>
    <string name="permissions_camera_error">相机无法完成初始化,请正确授权。</string>

    <string name="str_load_more_loading">加载中</string>
    <string name="str_load_more_error">加载失败，点击重试</string>
    <string name="str_load_more_the_end">没有更多数据</string>
    <string name="str_load_more_no_network">没有网络，点击重试</string>
    <string name="no_storage">没有可用的存储设备</string>
    <string name="no_permission_WRITE_EXTERNAL">缺少存储权限</string>
    <string name="sys_exit_tip">再按一次退出程序</string>
    <string name="connectting">正在连接服务器...</string>
    <string name="init_error_code_msg">初始化失败,错误码：</string>
    <string name="text_begin">请开始说话…</string>
    <!--登录 注册 忘记密码-->
    <string name="user_name">用户名</string>
    <string name="password">密码</string>
    <string name="register">用户注册</string>
    <string name="input_tips">请输入以下信息注册服务易用户账号</string>
    <string name="phone_number">账号(手机号) :</string>
    <string name="code_number">校验码 :</string>
    <string name="pwd_number">密码 :</string>
    <string name="nickname">姓名 :</string>
    <string name="phone_hint">请输入账号</string>
    <string name="password_hint">请输入密码</string>
    <string name="login_title">服务易</string>
    <string name="login_btn">登录</string>
    <string name="forget_pwd">忘记密码?</string>
    <string name="new_user">新用户注册</string>
    <string name="get_code">获取验证码</string>
    <string name="submit">提交</string>
    <string name="forget_password">忘记密码</string>
    <string name="reset_pwd">请输入以下信息重置密码</string>
    <string name="phone_empty">手机号码不能为空</string>
    <string name="code_empty">验证码不能为空</string>
    <string name="name_empty">用户名不能为空</string>
    <string name="pwd_empty">密码不能为空</string>
    <string name="update_pwd_tips">正在修改密码...</string>
    <string name="isLogining">正在登录...</string>
    <string name="register_user">正在注册...</string>
    <string name="phone_not_format">手机号码格式不正确</string>
    <string name="register_success">注册成功</string>
    <string name="update_pwd_success">密码已修改</string>
    <string name="send_code_success">验证码已发送</string>
    <string name="pwd_length_tips">密码不能少于6位</string>
    <string name="agent_addr">地址：%1$s</string>
    <string name="crash">不好意思崩溃了</string>
    <!--自定义相机-->
    <string name="tips_camera_not_exist">不存在相机设备</string>
    <string name="topic_camera_flashlight_off">关闭</string>
    <string name="topic_camera_flashlight_on">开启</string>
    <string name="topic_camera_flashlight_auto">自动</string>
    <string name="topic_camera_front">前镜头</string>
    <string name="topic_camera_back">后镜头</string>
    <string name="topic_camera_takephoto_failure">拍照竟然失败了！</string>
    <string name="tips_camera_forbidden">相机被禁用 请修改应用权限</string>
    <string name="tips_sdcard_notexist">SD卡不存在</string>

    <string name="network_disconnect">网络异常，请检查网络是否连接!</string>
    <string name="ver_code">正在获取验证码...</string>

    <!--MyFragment-->
    <string name="baidu_com">百度一下</string>
    <string name="update_pwd">修改密码</string>
    <string name="scan_text">扫一扫</string>
    <string name="work_staus">工作状态</string>
    <string name="exit_login">退出登录</string>
    <string name="exit_login_success">退出登录成功</string>
    <string name="exiting">正在退出登录...</string>
    <!--修改密码-->
    <string name="old_pwd">旧密码</string>
    <string name="new_pwd">新密码</string>
    <string name="confirm_pwd">再次确认密码</string>
    <string name="save">保存</string>
    <string name="old_pwd_input">请输入旧密码</string>
    <string name="new_pwd_input">请输入新密码</string>
    <string name="confirm_pwd_input">请输入确认密码</string>
    <string name="new_not_confirm">新密码输入不一致</string>

    <!--KKKKKKKKKKKKKKKKK-->
    <string name="title_main">高德定位SDK功能展示</string>

    <string name="title_location">获取定位数据</string>
    <string name="location">获取定位数据</string>
    <string name="location_dec">调用定位接口获取定位数据</string>

    <string name="title_geoFence">地理围栏</string>
    <string name="geoFence">地理围栏</string>
    <string name="geoFence_dec">展示地理围栏功能</string>

    <string name="roundGeoFence">圆形地理围栏</string>
    <string name="roundGeoFence_dec">展示圆形地理围栏</string>

    <string name="polygonGeoFence">多边形地理围栏</string>
    <string name="polygonGeoFence_dec">展示多边形地理围栏</string>

    <string name="keywordGeoFence">关键字地理围栏</string>
    <string name="keywordGeoFence_dec">展示关键字地理围栏</string>

    <string name="nearbyGeoFence">周边地理围栏</string>
    <string name="nearbyGeoFence_dec">展示周边地理围栏</string>

    <string name="districtGeoFence">行政区划地理围栏</string>
    <string name="districtGeoFence_dec">展示行政区划地理围栏</string>

    <string name="multipleGeoFence">综合展示</string>
    <string name="multipleGeoFence_dec">综合展示地理围栏的功能</string>


    <string name="oldGeoFence">旧版地理围栏</string>
    <string name="oldGeoFence_dec">旧版地理围栏，不建议使用</string>


    <string name="title_assistantLocation">H5辅助定位</string>
    <string name="assistantLocation">H5辅助定位</string>
    <string name="assistantLocation_dec">展示H5辅助定位功能</string>

    <string name="title_tools">地图计算工具</string>
    <string name="tools">地图计算工具</string>
    <string name="tools_dec">坐标转换等功能演示</string>

    <string name="title_lastLocation">获取最后一次位置</string>
    <string name="lastLocation">获取最后一次位置</string>
    <string name="lastLocation_dec">获取最后一次定位的位置，此位置是一个历史位置</string>


    <string name="title_alarmCPU">定时唤起CPU</string>
    <string name="alarmCPU">定时唤起cpu</string>
    <string name="alarmCPU_dec">通过一个闹钟程序后台定时唤起cpu</string>

    <string name="title_errorCode">错误码说明</string>
    <string name="errorCode">错误码说明</string>
    <string name="errorCode_dec">错误码说明以及对应的解决方法</string>

    <string name="defaultInteval">2000</string>
    <string name="defaultHttpTimeout">30000</string>

    <string name="battery_saving">低功耗模式</string>
    <string name="device_sensors">仅设备模式</string>
    <string name="hight_accuracy">高精度模式</string>
    <string name="interval">定位周期(ms)</string>
    <string name="httpTimeout">网络超时(ms)</string>
    <string name="location_once">单次定位</string>
    <string name="needAddress">逆地理编码</string>
    <string name="cacheAble">开启缓存</string>
    <string name="onceLastest">提高首次定位精度</string>
    <string name="gpsFirst">GPS优先</string>
    <string name="useSensor">使用传感器</string>
    <string name="wifiScan">开启wifi扫描</string>

    <string name="alarmInterval">唤醒周期(s)</string>

    <string name="startLocation">开始定位</string>
    <string name="stopLocation">停止定位</string>

    <string name="fenceRadius">围栏半径</string>
    <string name="meter">米</string>
    <string name="activatesAction">触发条件</string>
    <string name="alertIn">进入</string>
    <string name="alertOut">离开</string>
    <string name="alertStated">停留</string>
    <string name="addFence">添加围栏</string>
    <string name="removeFence">移除围栏</string>

    <string name="hideOption">隐藏设置</string>
    <string name="showOption">显示设置</string>

    <string name="showList">显示列表</string>
    <string name="hideList">隐藏列表</string>

    <string name="fence_round">圆形围栏</string>
    <string name="fence_polygon">多边形</string>
    <string name="fence_keyword">关键字围栏</string>
    <string name="fence_nearby">周边围栏</string>
    <string name="fence_district">行政区划围栏</string>

    <string name="getLastLocation">获取最后位置</string>

    <string name="startAssistantLocation">启动H5辅助定位</string>
    <string name="stopAssistantLocation">停止H5辅助定位</string>
    <string name="urlLocation">浏览器定位</string>
    <string name="assistantLocationInfo">辅助定位已经启动，请点击模拟浏览器请求或者在浏览器中输入http://127.0.0.1:43689/进行测试</string>

    <string name="coordinateConvert">坐标转换</string>
    <string name="checkIsChina">位置区域判断</string>

    <string name="notifyTitle">提示</string>
    <string name="notifyMsg">当前应用缺少必要权限。\n\n请点击\"设置\"-\"权限\"-打开所需权限。</string>
    <string name="setting">设置</string>
    <string name="cancel">取消</string>
    <string name="confirm">确定</string>
    <string name="scan_image">图片预览</string>


    <string name="errorCodeInfo">
	    0	定位成功。	可以在定位回调里判断定位返回成功后再进行业务逻辑运算\n
	    1	一些重要参数为空，如context；	请对定位传递的参数进行非空判断\n
	    2	定位失败，由于仅扫描到单个wifi，且没有基站信息。	请重新尝试\n
	    3	获取到的请求参数为空，可能获取过程中出现异常。	请对所连接网络进行全面检查，请求可能被篡改\n
	    4	请求服务器过程中的异常，多为网络情况差，链路不通导致	请检查设备网络是否通畅\n
	    5	返回的XML格式错误，解析失败。	请稍后再试\n
	    6	定位服务返回定位失败。	请将errorDetail（通过getLocationDetail()方法获取）信息通过工单系统反馈给我们\n
	    7	KEY鉴权失败。	请仔细检查key绑定的sha1值与apk签名sha1值是否对应，或通过高频问题查找相关解决办法\n
	    8	Android exception常规错误	请将errordetail（通过getLocationDetail()方法获取）信息通过工单系统反馈给我们\n
	    9	定位初始化时出现异常。	请重新启动定位\n
	    10	定位客户端启动失败。	请检查AndroidManifest.xml文件是否配置了APSService定位服务\n
	    11	定位时的基站信息错误。	请检查是否安装SIM卡，设备很有可能连入了伪基站网络\n
	    12	缺少定位权限。	请在设备的设置中开启app的定位权限\n
	    13	定位失败，由于设备未开启WIFI模块或未插入SIM卡，且GPS当前不可用。 建议开启设备的WIFI模块，并将设备中插入一张可以正常工作的SIM卡，或者检查GPS是否开启；如果以上都内容都确认无误，请您检查App是否被授予定位权限\n
	    14  GPS 定位失败，由于设备当前 GPS 状态差。 建议持设备到相对开阔的露天场所再次尝试\n
	    15	定位结果被模拟导致定位失败。 如果您希望位置被模拟，请通过setMockEnable(true);方法开启允许位置模拟\n
	    16 	当前POI检索条件、行政区划检索条件下，无可用地理围栏。 建议调整检索条件后重新尝试，例如调整POI关键字，调整POI类型，调整周边搜区域，调整行政区关键字等\n
	    17 	相同的地理围栏已经存在，无需重复添加\n
	    18	飞行模式下关闭了WIFI开关，请关闭飞行模式或者打开WIFI开关\n
	    19	没有检查到SIM卡，并且关闭了WIFI开关，请打开WIFI开关或者插入SIM卡\n
	</string>

    <!-- 云端发音人列表（中文） -->
    <string-array name="voicer_cloud_entries">
        <item>小燕</item>
        <item>小宇</item>
        <item>小研</item>
        <item>小琪</item>
        <item>小峰</item>
        <item>小梅</item>
        <item>小莉</item>
        <item>小蓉</item>
        <item>小芸</item>
        <item>小坤</item>
        <item>小强 </item>
        <item>小莹</item>
        <item>小新</item>
        <item>楠楠</item>
        <item>老孙</item>
    </string-array>
    <!-- 云端发音人列表（英文） -->
    <string-array name="voicer_cloud_values">
        <item>xiaoyan</item>
        <item>xiaoyu</item>
        <item>vixy</item>
        <item>xiaoqi</item>
        <item>vixf</item>
        <item>xiaomei</item>
        <item>xiaolin</item>
        <item>xiaorong</item>
        <item>xiaoqian</item>
        <item>xiaokun</item>
        <item>xiaoqiang</item>
        <item>vixying</item>
        <item>xiaoxin</item>
        <item>nannan</item>
        <item>vils</item>
    </string-array>

    <string name="accessibility_app_name">AI智能生活（推荐）</string>
    <string name="accessibility_description">启动智能辅助功能后,你可以轻松通过语音快捷的打开第三方应用。</string>


</resources>
