<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <data>

        <import type="android.view.View" />

        <import type="com.sikefeng.chinaren.presenter.LoginPresenter" />

        <import type="com.sikefeng.chinaren.presenter.vm.LoginViewModel" />

        <variable
            name="user"
            type="com.sikefeng.chinaren.entity.model.UserBean" />

        <variable
            name="presenter"
            type="LoginPresenter" />

        <variable
            name="viewModel"
            type="LoginViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@mipmap/bg_login"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="80dp"
                android:orientation="vertical">


                <RelativeLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/logo"
                    android:layout_marginTop="30dp"
                    android:paddingLeft="24dip"
                    android:paddingRight="24dip">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <ImageView
                            android:id="@+id/app_logo"
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:layout_centerVertical="true"
                            android:layout_marginBottom="10dp"
                            android:src="@mipmap/ic_launcher" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_marginLeft="20dp"
                            android:layout_toRightOf="@id/app_logo"
                            android:text="@string/login_title"
                            android:textColor="@color/withe"
                            android:textSize="25sp"
                            android:textStyle="bold" />
                    </RelativeLayout>

                    <com.sikefeng.chinaren.widget.ClearEditText
                        android:id="@+id/loginName"
                        style="@style/editTextStyle"
                        android:layout_width="fill_parent"
                        android:layout_height="44.6dip"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="60dip"
                        android:background="@color/withe"
                        android:drawablePadding="18dip"
                        android:hint="@string/phone_hint"
                        android:inputType="phone"
                        android:paddingLeft="10dip"
                        android:paddingRight="10dip"
                        android:maxLength="11"/>

                    <com.sikefeng.chinaren.widget.ClearEditText
                        android:digits="0123456789abcdefghigklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
                        android:id="@+id/newPassword"
                        style="@style/editTextStyle"
                        android:layout_width="fill_parent"
                        android:layout_height="44.6dip"
                        android:layout_below="@id/loginName"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="10dp"
                        android:background="@color/withe"
                        android:drawablePadding="18dip"
                        android:gravity="center_vertical"
                        android:hint="@string/password_hint"
                        android:inputType="textPassword"
                        android:paddingLeft="10dip"
                        android:paddingRight="10dip" />
                </RelativeLayout>

                <Button
                    android:id="@+id/btnLogin"
                    android:layout_width="fill_parent"
                    android:layout_height="45dp"
                    android:layout_below="@+id/password"
                    android:layout_marginLeft="22dip"
                    android:layout_marginRight="22dip"
                    android:layout_marginTop="25dp"
                    android:background="@drawable/btn_login"
                    android:text="@string/login_btn"
                    android:textColor="@color/withe"
                    android:textSize="18sp" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="20dp"
                    android:gravity="center_horizontal"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tvForgetPwd"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_marginLeft="20dip"
                        android:layout_marginRight="20dip"
                        android:text="@string/forget_pwd"
                        android:textColor="@color/theme_color" />

                    <TextView
                        android:id="@+id/tvRegister"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_marginLeft="20dip"
                        android:layout_marginRight="20dip"
                        android:text="@string/new_user"
                        android:textColor="@color/theme_color" />
                </RelativeLayout>
            </LinearLayout>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:padding="10dp"
                android:text=""
                android:textColor="#ff333333"
                android:textSize="12sp" />
        </RelativeLayout>
        <!--<LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/loginName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{user.loginName}" />
            <TextView
                android:id="@+id/loginNameTips"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <Button
            android:id="@+id/loginBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="@{() -> presenter.login(user)}"
            android:text="SUBMIT" />-->
    </LinearLayout>
</layout>